force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description
  >Annual Contract Value. Stored, set by the Opportunity revenue trigger — recurring ARR plus prorated one-time line items.</description>
    <inlineHelpText
  >Annual contract value ($). Trigger-maintained.</inlineHelpText>
    <label>ACV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>