force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description
  >Annual Recurring Revenue. Stored field stamped by the Opportunity revenue trigger by summing the recurring OLIs (Revenue_Type__c IN ('Subscription','Usage')) and prorating to a 12-month base.</description>
    <inlineHelpText
  >Annual recurring revenue ($). Maintained by the revenue trigger — do not edit manually.</inlineHelpText>
    <label>ARR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>