force-app/main/default/objects/Opportunity/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description
  >Billing cadence (Monthly, Quarterly, Semi-Annual, Annual, Up-Front). Backed by Northstar_Billing_Frequency GVS. Mirrored onto Quote, Order, and Contract.</description>
    <inlineHelpText>How often the customer is billed.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>