force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description
  >The primary competitor on this opportunity. Backed by Northstar_Competitor GVS. Used in competitive-loss reports.</description>
    <inlineHelpText
  >Primary competitor. Captured for competitive analysis.</inlineHelpText>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Competitor</valueSetName>
    </valueSet>
</CustomField>