force-app/main/default/objects/Opportunity/fields/Deal_Desk_Approver__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Discount-approval approver for this deal, set by segment (Enterprise vs SMB) via the routing flow. Used as the `relatedUserField` approver in the Discount Approval process. Replaces the dropped Enterprise/SMB Deal Desk queues.</description>
    <inlineHelpText
  >The user who approves discounts on this deal. Set by the routing flow.</inlineHelpText>
    <label>Deal Desk Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deal Desk Approvals (Opportunity)</relationshipLabel>
    <relationshipName>Deal_Desk_Approval_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>