force-app/main/default/objects/Opportunity/fields/Discount_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Status__c</fullName>
    <description
  >Opportunity-level discount approval lifecycle (Not Required / Pending / Approved / Rejected). Automation-only: OpportunityTriggerHandler escalates to Pending when the Opp discount-approval criteria hold (Strategic Logo reason, or any discount reason with Amount >= 100k) and the Northstar Discount Approval process records the decision. Gated by the Discount_Approval_Required_For_Close validation rule so a discounted Opp can't close won without Deal Desk sign-off.</description>
    <inlineHelpText
  >Opportunity discount approval lifecycle. Maintained by the Opportunity trigger and the discount approval process.</inlineHelpText>
    <label>Discount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>