force-app/main/default/objects/Opportunity/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description
  >Why a non-standard discount is being offered. Backed by Northstar_Discount_Reason GVS. Required by the Discount Approval process when total discount exceeds the segment threshold.</description>
    <inlineHelpText
  >Required when discount exceeds segment threshold. Drives approval routing.</inlineHelpText>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Discount_Reason</valueSetName>
    </valueSet>
</CustomField>