force-app/main/default/objects/Opportunity/fields/Has_Primary_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Has_Primary_Contact_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when this Opportunity has at least one OpportunityContactRole with IsPrimary = true. Stamped by OpportunityTriggerHandler on save so the Negotiation_Requires_Primary_Contact validation rule can gate the Negotiation transition — a validation rule cannot traverse to child OpportunityContactRole records.</description>
    <inlineHelpText
  >Maintained by the Opportunity trigger — do not edit manually.</inlineHelpText>
    <label>Has Primary Contact Role</label>
    <type>Checkbox</type>
</CustomField>