force-app/main/default/objects/Opportunity/fields/Implementation_Package__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Package__c</fullName>
    <description
  >Implementation engagement bundled with this opportunity (Quickstart, Enterprise, None). Backed by Northstar_Implementation_Package GVS. Read by the Order provisioning trigger.</description>
    <inlineHelpText
  >Implementation engagement attached. Drives Provisioning Requested event payload.</inlineHelpText>
    <label>Implementation Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Implementation_Package</valueSetName>
    </valueSet>
</CustomField>