force-app/main/default/objects/Opportunity/fields/Is_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Is_Discounted__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when at least one OpportunityLineItem carries a per-line Discount &gt; 0. Rolled up from the OLIs by OpportunityLineItemTriggerHandler so the Discount_Reason_Required_High_Value validation rule can key off an actual discount instead of the Amount &gt;= 100k proxy.</description>
    <inlineHelpText
  >Maintained by the OpportunityLineItem trigger — do not edit manually. Checked when any product line on this opportunity is discounted.</inlineHelpText>
    <label>Is Discounted</label>
    <type>Checkbox</type>
</CustomField>