force-app/main/default/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Monthly Recurring Revenue. Formula = ARR__c / 12.</description>
    <formula>ARR__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated as ARR / 12.</inlineHelpText>
    <label>MRR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>