force-app/main/default/objects/Opportunity/fields/Partner_Influenced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Influenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Mirrors Account.Partner_Influenced__c onto the opportunity for pipeline and partner-attribution reports. Stamped by the Opportunity trigger on create / Account change.</description>
    <inlineHelpText
  >True if a partner influenced this deal. Mirrored from Account.</inlineHelpText>
    <label>Partner Influenced</label>
    <type>Checkbox</type>
</CustomField>