force-app/main/default/objects/Opportunity/fields/Primary_Quote_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True once the primary Quote for this opportunity has been moved to Accepted. Stamped by the Quote trigger so the Opportunity flow can advance to Negotiation/Closed Won.</description>
    <inlineHelpText
  >Maintained by the Quote trigger — do not edit manually.</inlineHelpText>
    <label>Primary Quote Accepted</label>
    <type>Checkbox</type>
</CustomField>