force-app/main/default/objects/Opportunity/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <description
  >Post-close provisioning lifecycle status. Inline picklist (not GVS) — Order, Contract, and Case use the same labels but with separate value sets to keep each lifecycle's vocabulary independently revisable.</description>
    <inlineHelpText
  >Provisioning state of the closed-won opportunity. Maintained by the Order/Provisioning trigger.</inlineHelpText>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>