force-app/main/default/objects/Opportunity/fields/Renewal_Source_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Source_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Lookup to the Contract this renewal opportunity is renewing. Populated by the renewal-creation job when Auto_Renewal_Enabled__c is true. Drives the renewal motion in reports and the renewal flow.</description>
    <inlineHelpText
  >The Contract being renewed. Populated by the renewal job; manual override allowed.</inlineHelpText>
    <label>Renewal Source Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Renewal Opportunities</relationshipLabel>
    <relationshipName>Renewal_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>