force-app/main/default/objects/Opportunity/fields/Requires_Finance_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Finance_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set by the Opportunity trigger / flow when non-standard payment terms or revenue-recognition concerns are detected. Triggers the Finance Reviewers public group email alert.</description>
    <inlineHelpText
  >Check if this deal needs Finance review. Auto-stamped — manual override allowed.</inlineHelpText>
    <label>Requires Finance Review</label>
    <type>Checkbox</type>
</CustomField>