force-app/main/default/objects/Opportunity/fields/Requires_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Legal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set by the Opportunity trigger / flow when terms outside standard paper are detected (custom MSA, unusual indemnity language). Triggers the Legal Reviewers public group email alert.</description>
    <inlineHelpText
  >Check if this deal needs Legal review. Auto-stamped — manual override allowed.</inlineHelpText>
    <label>Requires Legal Review</label>
    <type>Checkbox</type>
</CustomField>