force-app/main/default/objects/Opportunity/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description
  >Free-text capture of why this Opportunity is owned by its current owner / went through its current Deal Desk path. Stamped by routing and Deal Desk approval logic.</description>
    <inlineHelpText
  >Last routing/deal-desk decision explanation. Auto-stamped — overwritten on the next routing pass.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>