force-app/main/default/objects/Opportunity/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <description
  >The sales motion driving this opportunity (New Logo, Expansion, Renewal, Services Only, Partner Sourced). Backed by Northstar_Sales_Motion GVS; mirrored from Account but editable per-Opp.</description>
    <inlineHelpText
  >Sales motion for this deal. Drives routing, deal-desk path, and forecasting category.</inlineHelpText>
    <label>Sales Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Sales_Motion</valueSetName>
    </valueSet>
</CustomField>