force-app/main/default/objects/Opportunity/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description
  >Last day of paid service. Formula = ADDMONTHS(Subscription_Start_Date__c, term) - 1 so a 12-month term starting 2026-01-01 ends 2026-12-31 (not 2027-01-01). Returns null if start date OR term is blank, and null if the term value is unmapped (so unmapped values surface as missing-data rather than silently zeroing TCV).</description>
    <formula>IF(
  ISBLANK(Subscription_Start_Date__c) || ISBLANK(TEXT(Subscription_Term_Months__c)),
  NULL,
  ADDMONTHS(
    Subscription_Start_Date__c,
    CASE(
      TEXT(Subscription_Term_Months__c),
      "12 Months", 12,
      "24 Months", 24,
      "36 Months", 36,
      NULL
    )
  ) - 1
)</formula>
    <inlineHelpText
  >Auto-calculated: subscription start + term months.</inlineHelpText>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>