force-app/main/default/objects/Opportunity/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description
  >First day of paid service on this opportunity. Often equals Contract.StartDate but stays distinct on the Opp so unconverted deals can carry a planned start.</description>
    <inlineHelpText
  >Planned subscription start. Drives Subscription End Date.</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>