force-app/main/default/objects/Opportunity/fields/Subscription_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term_Months__c</fullName>
    <description
  >Subscription length in months. Backed by Northstar_Subscription_Term GVS (currently 12/24/36 Months) so renewal, end-date, and TCV calculations share one source.</description>
    <inlineHelpText
  >How long is the subscription? Drives end-date and TCV.</inlineHelpText>
    <label>Subscription Term (Months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Subscription_Term</valueSetName>
    </valueSet>
</CustomField>