force-app/main/default/objects/Opportunity/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description
  >Premium support tier sold with this opportunity (Standard, Premium Standard, Premium Enterprise, 24x7). Northstar_Support_Tier GVS; mirrored on Account, Quote, Order, Contract, and Case.</description>
    <inlineHelpText>Support tier proposed on this deal.</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Support_Tier</valueSetName>
    </valueSet>
</CustomField>