force-app/main/default/objects/Opportunity/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <description
  >Total Contract Value. Formula = ACV__c * Subscription_Term_Years__c. Treats blanks as blanks so a null Subscription_Term_Years__c (unmapped picklist value) propagates to a null TCV rather than silently zeroing — preserves the "null as data-quality signal" pattern set up on Subscription_Term_Years__c.</description>
    <formula>ACV__c * Subscription_Term_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >Auto-calculated as ACV × subscription term years.</inlineHelpText>
    <label>TCV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>