force-app/main/default/objects/Opportunity/fields/Territory_Segment__c.field-meta.xml
<CustomField>
    <fullName>Territory_Segment__c</fullName>
    <description
  >Denormalized "Region - Segment" string copied from the Account onto the Opp so report grouping on the deal does not require a join. Maintained by the Opp trigger.</description>
    <inlineHelpText>Auto-stamped territory string. Do not edit.</inlineHelpText>
    <label>Territory Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>