force-app/main/default/objects/Opportunity/recordTypes/Expansion.recordType-meta.xml
<RecordType>
    <fullName>Expansion</fullName>
    <active>true</active>
    <businessProcess>Northstar_Sales_Process</businessProcess>
    <description
  >Add-on / cross-sell into existing customer accounts.</description>
    <label>Expansion</label>
</RecordType>