force-app/main/default/objects/Opportunity/recordTypes/New_Business.recordType-meta.xml
<RecordType>
    <fullName>New_Business</fullName>
    <active>true</active>
    <businessProcess>Northstar_Sales_Process</businessProcess>
    <description
  >Net-new customer deals (Sales_Motion__c = New Logo).</description>
    <label>New Business</label>
</RecordType>