force-app/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>Northstar_Sales_Process</businessProcess>
    <description
  >Renewal Opportunities; typically auto-spawned by the renewal-creation job.</description>
    <label>Renewal</label>
</RecordType>