force-app/main/default/objects/Opportunity/recordTypes/Services_Only.recordType-meta.xml
<RecordType>
    <fullName>Services_Only</fullName>
    <active>true</active>
    <businessProcess>Northstar_Sales_Process</businessProcess>
    <description
  >Services-only engagements with no subscription component.</description>
    <label>Services Only</label>
</RecordType>