force-app/main/default/objects/Opportunity/listViews/Closed_Won_Pending_Order.listView-meta.xml
<ListView>
    <fullName>Closed_Won_Pending_Order</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Provisioning_Status__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>Provisioning_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Closed Won Pending Order</label>
</ListView>