force-app/main/default/objects/Opportunity/listViews/My_Enterprise_Deals.listView-meta.xml
<ListView>
    <fullName>My_Enterprise_Deals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Territory_Segment__c</columns>
    <columns>ARR__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Territory_Segment__c</field>
        <operation>contains</operation>
        <value>Enterprise</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Enterprise Deals</label>
</ListView>