force-app/main/default/objects/Opportunity/listViews/Proposal_Stage_Missing_Quote.listView-meta.xml
<ListView>
    <fullName>Proposal_Stage_Missing_Quote</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Primary_Quote_Accepted__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Proposal/Price Quote</value>
    </filters>
    <filters>
        <field>Primary_Quote_Accepted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Proposal Stage Missing Quote</label>
</ListView>