force-app/main/default/objects/Opportunity/listViews/Renewals_Due_This_Quarter.listView-meta.xml
<ListView>
    <fullName>Renewals_Due_This_Quarter</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Renewal_Source_Contract__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Renewal_Source_Contract__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Renewals Due This Quarter</label>
</ListView>